--- a/index.html
+++ b/index.html
@@ -5,10 +5,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>*insert topic title here*</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alkatra&family=Josefin+Sans&display=swap" rel="stylesheet">
+    <title>Resident Evil 4 Remake</title>
 </head>
 
-<body>
+<body style="font-family: 'Josefin Sans', sans-serif;">
+    <div>
+        <h1 style="text-align: center;">Resident Evil 4 Remake</h1>
+
+        <nav style="text-align: center;">
+            <a href="https://www.youtube.com/watch?v=j5Ic2z3_xp0" target="_blank">Resident Evil 4 Remake Reveal
+                Trailer</a>
+            <hr />
+            <a href="https://store.steampowered.com/app/2050650/Resident_Evil_4/" target="_blank">RE4 Remake Steam
+                Store</a>
+            <hr />
+            <a href="https://www.residentevil.com/re4/en-us/" target="_blank">RE4 Capcom Official Site</a>
+        </nav>
+        <br />
+        <iframe src="https://www.youtube.com/embed/j5Ic2z3_xp0" frameborder="0" width="560" height="315" allowfullscreen
+            style="position: relative; left: 35%;"></iframe>
+
+
+        <h4>When did the <i>ORIGINAL</i> Resident Evil 4 come out?</h4>
+        <div style="border: double 10px #ba263a; padding: 1rem; float: left; width: 40%;">
+            <form>
+                <fieldset>
+                    <legend>Launch Dates:</legend>
+                    <p>
+                        <input type="radio" name="question" id="Date1" value="Date1">
+                        <label for="Date1">March 24, 2005</label>
+                    </p>
+                    <p>
+                        <input type="radio" name="question" id="Date2" value="Date2">
+                        <label for="Date2">October 2, 2005</label>
+                    </p>
+                    <p>
+                        <input type="radio" name="question" id="Date3" value="Date3">
+                        <label for="Date3">March 22, 2005</label>
+                    </p>
+                    <p>
+                        <input type="radio" name="question" id="Date4" value="Date4">
+                        <label for="Date4">January 11, 2005</label>
+                    </p>
+                    <input type="radio" name="question" id="OtherDate" value="OtherDate">
+                    <label for="OtherDate">Other: <input type="date" /> </label>
+                    </p>
+                </fieldset>
+            </form>
+        </div>
+        <br />
+        <div style="border: dotted 10px #ba263a; padding: 1rem; float: right; width: 40%;">
+            <h4>Who does the player <i>MAINLY</i> control in this game?</h4>
+            <fieldset>
+                <legend>Character Name:</legend>
+                <p>
+                    <label>Answer: <input style="width: 500px;" type="text"
+                            placeholder="Hint: He is playable in RE2 and RE6" /></label>
+                </p>
+            </fieldset>
+        </div>
+        <br />
+    </div>
 
 </body>
 
